added the swagger test cases junit mockito exception handling by sarthak pawar